fix: alignment

--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
 
 * { 
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     text-align: center;
 }
 
 :root {
-    --c-ta-border: grey;
-    --c-focus: #fd19d7;
+    --c-border: grey;
+    --c-focus: #f54500;
+    --c-primary: #f54500;
+    --c-secondary: #12026b;
+    --c-text-btn: white;
 }
 
 .title {
+    word-spacing: 10px;
+}
+
+.title > span {
     font-size: 40px;
+    font-family: 'Pacifico', cursive;
+}
+
+.title>span:nth-child(odd) {
+    color: var(--c-primary);
+}
+
+.title>span:nth-child(even) {
+    color: var(--c-secondary);
 }
 
 .content {
-    grid-template-columns: repeat(5, 1fr);
     padding: 10px 15px;
-    column-gap: 20px;
 }
 
 /* @media only screen and (max-width: 675px) */
@@ -28,7 +42,6 @@
 .controls,
 .input-controls,
 .output-controls,
-.separators,
 .original-text-container,
 .transformed-text-container,
 .duplicate-detail
@@ -36,8 +49,7 @@
     display: grid;
 }
 
-.app,
-.separators {
+.app {
     place-items: center;
 }
 
@@ -48,36 +60,67 @@
     grid-template-rows: repeat(9, 1fr);
 }
 
-.input-controls { 
-    grid-column: 1 / span 2;   
-}
-
 .input-controls > textarea, .output-controls > textarea {
     grid-row: 2 / span 8;
 }
+
+@media only screen and (max-width: 700px) {
+    .content {
+        grid-template-rows: repeat(4, 1fr);
+        row-gap: 20px;
+    }
+
+    .input-controls {
+        grid-row: 1;
+    }
+
+    .controls {
+        grid-row: 2;
+        padding-top: 0px;
+    }
+
+    .output-controls {
+        grid-row: 3;
+    }
+}
+
+@media only screen and (min-width: 701px) {
+    .content {
+        grid-template-columns: repeat(5, 1fr);
+        column-gap: 20px;
+    }
+
+    .input-controls {
+        grid-column: 1 / span 2;   
+    }
+
+    .controls {
+        grid-column: 3;
+        padding-top: 50px;
+    }
+
+    .output-controls {
+        grid-column: 4 / span 2;   
+    }
+}
+
 
 .input-controls > label, .output-controls > label {
     align-self: center;
 }
 
-.output-controls { 
-    grid-column: 4 / span 2;   
-}
-
 .controls {
     place-items: center;
     row-gap: 15px;
-    padding-top: 50px;
 }
 
-.old-separator-text, .new-separator-text {
+.old-delimiter-text, .new-delimiter-text {
     width: 80%;
     margin-top: 10px;
     height: 25px;
 }
 
 .duplicate-detail {
-    row-gap: 15px;
     height: 200px;
     width: 100%;
 }
@@ -87,7 +130,7 @@
     height: 150px;
     padding: 5px;
     margin-top: 10px;
-    border: 1px solid var(--c-ta-border);
+    border: 1px solid var(--c-border);
 }
 
 .transformed-text {
@@ -106,20 +149,40 @@
 
 /* Element styles */
 textarea:focus, button:focus {
-    box-shadow: 0px 0px 0px 2px var(--c-focus);
+    box-shadow: 0px 0px 5px 2px var(--c-focus);
 }
 
 textarea {
     resize: none;
-    border: 1px solid var(--c-ta-border);
+    border: 1px solid var(--c-border);
     padding: 15px;
 }
-
 
 label {
     font-size: 20px;
 }
 
 button {
-    padding: 5px;
+    padding: 10px 5px;
+    border: 1px solid var(--c-border);
+    font-size: 15px;
+    color: var(--c-text-btn);
+    /* transition: all 2s ease-in; */
+    /* cursor: pointer; */
+}
+
+/* button:hover {
+    background: red;
+} */
+
+button:nth-child(1) {
+    background: var(--c-primary);
+}
+
+button:nth-child(2) {
+    background: var(--c-secondary);
+}
+
+button:active {
+    transform: translateY(-5px);
 }
